deliveries now written correctly, added more logging also